Changed fableseed title truncation to 18 characters to solve a shifting issue on mobile when hovering on rows. changed bg image from png to avif, deleted the png. did some more responsive styling of the background image on base.html. removed unnecessary flower image url custom method from the flower model and updated nursery.html to produce img elements with an alt and a src instead

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2966,6 +2966,9 @@
   .bg-\[url\(\/static\/images\/bg\.png\)\] {
     background-image: url(/static/images/bg.png);
   }
+  .bg-\[url\(\/static\/images\/bg1\.avif\)\] {
+    background-image: url(/static/images/bg1.avif);
+  }
   .bg-\[url\(\/static\/images\/bg1\.png\)\] {
     background-image: url(/static/images/bg1.png);
   }
@@ -2999,8 +3002,14 @@
   .bg-clip-border {
     background-clip: border-box;
   }
+  .bg-bottom {
+    background-position: bottom;
+  }
   .bg-center {
     background-position: center;
+  }
+  .bg-top {
+    background-position: top;
   }
   .mask-repeat {
     mask-repeat: repeat;
@@ -3423,6 +3432,11 @@
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
+    }
+  }
+  .lg\:bg-cover {
+    @media (width >= 64rem) {
+      background-size: cover;
     }
   }
   .lg\:bg-center {
